# openai-openapi

./: .gitignore  .spectral.yaml  Earthfile  MANIFEST.in  README.md  api_explorer.py  changelog.md  config-node.yaml  config.yaml  docker-compose.yml  environment.yml  finetuning-guide.md  index.html  openai.proto  openapi.json  openapi.yaml  package.json  pyproject.toml  realtime-api.yaml  requirements.txt  setup.py  tags
.github/workflows/: detekt.yml  main.yml  maven-publish.yml  mintlify-update.yml  readme-micro.yaml  upload-to-stainless.yml  validate-openapi.yml
api_explorer/: Dockerfile  __init__.py  middleware.py
backups/: 11-06-24.yaml
example/: openai_test.py
openai-java/: README.md  build.gradle  build.sbt  pom.xml  settings.gradle
openai-java/.openapi-generator/: FILES
openai-java/api/: openapi.yaml
openai-java/docs/: AudioApi.md  ChatApi.md  ChatCompletionRequestMessage.md  ChatCompletionResponseMessage.md  CompletionsApi.md  CreateAnswerRequest.md  CreateAnswerRequestStop.md  CreateAnswerResponse.md  CreateAnswerResponseSelectedDocumentsInner.md  CreateChatCompletionRequest.md  CreateChatCompletionRequestStop.md  CreateChatCompletionResponse.md  CreateChatCompletionResponseChoicesInner.md  CreateClassificationRequest.md  CreateClassificationResponse.md  CreateClassificationResponseSelectedExamplesInner.md  CreateCompletionRequest.md  CreateCompletionRequestPrompt.md  CreateCompletionRequestStop.md  CreateCompletionResponse.md  CreateCompletionResponseChoicesInner.md  CreateCompletionResponseUsage.md  (+43 more)
scripts/: generate_sdk.py  override_stream.ts
(+169 files in other folders)
